[package]
name = "sandbox"
version = "0.1.0"
authors = ["Victor Fugazzotto <victorfuga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Edo engine related
edocore = { path = "../edocore" }
edorenderer = { path = "../../edorenderer", features = ["vulkan"] }
# Graphics
gfx-hal = "0.4.1"
winit = "0.20.0-alpha4"
# Logging
log = "0.4.0"
env_logger = "0.7.1"
pretty_env_logger = "0.3.1"
